2020-04-08  Kirit Saelensminde  <kirit@felspar.com>
 * Deprecated most of the rest of the uses of `wchar_t` in `fostlib::string`
 * Perfect forward coercion and allow safe conversions by default

2020-02-19  Kirit Saelensminde  <kirit@felspar.com>
 Improve the memory efficiency of `push_back` and `insert` into `json` structures.

2020-02-13  Kirit Saelensminde  <kirit@felspar.com>
 Deprecate use of some old smart pointers that now have better alternatives.

2020-01-29  Kirit Saelensminde  <kirit@felspar.com>
 Add a faster path for parsing JSON when there are no Unicode escapes.

2020-01-19  Kirit Saelensminde  <kirit@felspar.com>
 * `json` can now be constructed from u16 literals.
 * Coercion should now always work if the to type is constructible from the from type.
 * Add conversions between `std` and `boost` `shared_ptr`s.

2020-01-15  Kirit Saelensminde  <kirit@felspar.com>
 Improve the `digester` interface to take more string types.

2019-12-26  Kirit Saelensminde  <kirit@felspar.com>
 Have `json` store the string directly rather than as a `shared_ptr`. This is a breaking change on `json` visitors.

2019-12-10  Kirit Saelensminde  <kirit@felspar.com>
 * Add source file and line/column numbers to `parse_error`.
 * Improve the `jcursor` API so it can mutate `json` more efficiently.

2019-12-09  Kirit Saelensminde  <kirit@felspar.com>
 Remove `-e` (print arguments/environment) support from command line.

2019-08-05  Pumidon Phathong  <pumidon@hot-now.com>
 Add sloppy json parser.

2019-07-01  Pattarawut Imamnuaysup  <kiraskylolax@gmail.com>
 Add trim function for f5::u8view.

2019-07-01  Kirit Saelensminde  <kirit@felspar.com>
 `minit` will now always try to execute, even if it is not needed.

2019-05-12  Kirit Saelensminde  <kirit@felspar.com>
 * Deprecate `length` members of `tagged_string` and `string`.
 * Add some APIs to `tagged_string` that are currently on `string`.

2019-05-09  Kirit Saelensminde  <kirit@felspar.com>
 Add `bin/minit` back into project.
