@@ -114,19 +114,6 @@ namespace {
 std::size_t fostlib::utf::utf16length(utf32 ch) {
     return character_length<utf16>(ch);
 }
-std::size_t fostlib::utf::native_length(utf32 ch) {
-    return character_length<native_char>(ch);
-}
-
-
-std::size_t fostlib::utf::native_length(nliteral) {
-    throw fostlib::exceptions::not_implemented(
-            "std::size_t fostlib::utf::native_length( const utf8 * )");
-}
-std::size_t fostlib::utf::native_length(wliteral) {
-    throw fostlib::exceptions::not_implemented(
-            "std::size_t fostlib::utf::native_length( wliteral )");
-}
 
 
 utf32 fostlib::utf::decode(nliteral seq, nliteral end) {
@@ -144,41 +131,6 @@ utf32 fostlib::utf::decode(nliteral seq, nliteral end) {
                 + coerce<string>(int(ch)) + ") with a different length ("
                 + coerce<string>(utf8length(ch)) + ")");
     return ch;
-}
-utf32 fostlib::utf::decode(wliteral begin, wliteral end) {
-    if (begin == 0)
-        return utf32(0);
-    else if (begin + 1 == end)
-        return utf::decode(*begin);
-    else
-        return utf::decode(*begin, *(begin + 1));
-}
-utf32 fostlib::utf::decode(wchar_t first) { return utf::decode(first, 0); }
-utf32 fostlib::utf::decode(wchar_t first, wchar_t second) {
-    try {
-        utf32 ch = first;
-        if (ch >= 0xffff)
-            throw fostlib::exceptions::unicode_encoding(
-                    "This character is outside the allowed range for a single "
-                    "UTF-16 wchar_t");
-        else if (ch >= 0xD800 && ch <= 0xDBFF) {
-            if (second == 0)
-                throw fostlib::exceptions::unicode_encoding(
-                        "Trailing surrogate missing from UTF-16 sequence (it "
-                        "is ZERO)");
-            if (second < 0xDC00 || second > 0xDFFF)
-                throw fostlib::exceptions::unicode_encoding(
-                        "Trailing character in a UTF-16 surrogate pair is "
-                        "missing (outside correct range)");
-            return assertValid(
-                    (ch << 10) + second + 0x10000 - (0xD800 << 10) - 0xDC00);
-        }
-        return assertValid(ch);
-    } catch (fostlib::exceptions::exception &e) {
-        fostlib::insert(e.data(), "utf-16", "decoding", first);
-        fostlib::insert(e.data(), "utf-16", "following", second);
-        throw;
-    }
 }
 
 
